# seurat

./: .gitignore  AGENTS.md  ARCHITECTURE.md  MIGRATION_SUMMARY.md  PHOBOS_INTEGRATION.md  QUERY_REDESIGN.md  README.md  app.py  application.py  catnip_db_app.py  catnip_parse_db.py  catnip_tree_app.py  config.py  controllers.py  db.py  ingest_campaign.py  media_utils.py  plugin_runtime.py  pyproject.toml  query_parser.py  requirements.txt  sqlite_store.py  state_init.py  ui.py
examples/: boutpp-schema.yaml
mhd_orszag_tang/: README.md
mhd_orszag_tang/scripts/: plot_snapshot.py  run_ensemble.py
mhd_orszag_tang/src/: adios_writer.cpp  adios_writer.hpp  main.cpp  mhd2d.cpp  mhd2d.hpp
scripts/: _xgc_analysis_runtime.py  plot_divertor_eich_profile.py  plot_divertor_lambda_q_timeseries.py  plot_divertor_load_map.py  plot_divertor_target_totals_timeseries.py
seurat/: __init__.py  app.py  constants.py  native_file_dialog.py  widgets.py
seurat/backends/: __init__.py  contracts.py  local.py
seurat/components/: __init__.py  context_menu.py  dialogs.py  grid.py  toolbar.py  ui.py  variables.py  workspace.py
seurat/controllers/: __init__.py  base.py  catalog.py  composer.py  context.py  context_menu.py  (+5 more)
seurat_plugins/: __init__.py  _xgc_1d.py  divertor_eich_profile.py  divertor_lambda_q_timeseries.py  divertor_load_map.py  divertor_target_totals_timeseries.py  paired_species_profile.py  profile_timeseries.py  radial_flux_corrected.py
tests/: test_application_navigation.py  test_backend_contract.py  test_campaign_schema.py  test_controllers.py  test_models.py  test_native_file_dialog.py  test_query_parser.py  test_scalar_field.py  test_state_ownership.py  test_trame_app.py  test_workspace_state.py  test_xgc_divertor_plugins.py
(+29 files in other folders)
