[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seurat"
version = "0.1.0"
description = "Trame viewer for ADIOS campaign data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adios2",
    "numpy",
    "pillow",
    "trame",
    "trame-vuetify",
]

[project.optional-dependencies]
schema = [
    "PyYAML",
]
test = [
    "pytest",
    "pytest-playwright",
]

[project.scripts]
seurat = "seurat.app:main"

[tool.setuptools]
py-modules = [
    "application",
    "app",
    "config",
    "controllers",
    "db",
    "ingest_campaign",
    "media_utils",
    "query_parser",
    "sqlite_store",
    "state_init",
    "ui",
]

[tool.setuptools.packages.find]
include = ["seurat*"]

[tool.setuptools.package-data]
"seurat.module" = ["serve/*.css", "serve/*.js"]

[tool.pytest.ini_options]
markers = [
    "browser: browser-level Trame/Vue integration test",
]
